--- a/src/index.css
+++ b/src/index.css
@@ -204,3 +204,12 @@ p {
 .page {
   min-height: calc(100vh - (20vh + 10rem));
 }
+
+.empty {
+  display:grid;
+  justify-content :center;
+  align-items:center;
+  text-align:center;
+  min-height:60vh;
+
+}
